[gd_scene load_steps=29 format=3 uid="uid://da675x64ue5sx"]

[ext_resource type="Script" uid="uid://deegath7tlthf" path="res://Framework/Clases/Avatars/avatar.gd" id="1_qs8fw"]
[ext_resource type="Texture2D" uid="uid://jvxrolreu5o" path="res://Assets/EscuderoSprints.png" id="2_4rxof"]

[sub_resource type="AtlasTexture" id="AtlasTexture_i5w3r"]
atlas = ExtResource("2_4rxof")
region = Rect2(0, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8oi4l"]
atlas = ExtResource("2_4rxof")
region = Rect2(96, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8h66a"]
atlas = ExtResource("2_4rxof")
region = Rect2(192, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rluo1"]
atlas = ExtResource("2_4rxof")
region = Rect2(288, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_338rn"]
atlas = ExtResource("2_4rxof")
region = Rect2(384, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ijhq4"]
atlas = ExtResource("2_4rxof")
region = Rect2(480, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hlbrl"]
atlas = ExtResource("2_4rxof")
region = Rect2(576, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_lq7qt"]
atlas = ExtResource("2_4rxof")
region = Rect2(672, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_vjyy7"]
atlas = ExtResource("2_4rxof")
region = Rect2(768, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_dxmmk"]
atlas = ExtResource("2_4rxof")
region = Rect2(864, 96, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_hm2jl"]
atlas = ExtResource("2_4rxof")
region = Rect2(0, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_o5hlv"]
atlas = ExtResource("2_4rxof")
region = Rect2(96, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_6jn15"]
atlas = ExtResource("2_4rxof")
region = Rect2(192, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_77t1r"]
atlas = ExtResource("2_4rxof")
region = Rect2(288, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rkpvy"]
atlas = ExtResource("2_4rxof")
region = Rect2(384, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_3gk7q"]
atlas = ExtResource("2_4rxof")
region = Rect2(480, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_aqruo"]
atlas = ExtResource("2_4rxof")
region = Rect2(576, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_14q1r"]
atlas = ExtResource("2_4rxof")
region = Rect2(672, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_cd1aw"]
atlas = ExtResource("2_4rxof")
region = Rect2(768, 0, 96, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_1rowq"]
atlas = ExtResource("2_4rxof")
region = Rect2(864, 0, 96, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_w3x54"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i5w3r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8oi4l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8h66a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rluo1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_338rn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ijhq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hlbrl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lq7qt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vjyy7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dxmmk")
}],
"loop": true,
"name": &"atacar",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hm2jl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o5hlv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6jn15")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_77t1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rkpvy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3gk7q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_aqruo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_14q1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cd1aw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1rowq")
}],
"loop": true,
"name": &"caminar",
"speed": 10.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4gl5s"]

[sub_resource type="Animation" id="Animation_m4xl8"]
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["atacar"]
}

[sub_resource type="Animation" id="Animation_nbbxp"]
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:animation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["caminar"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uoc6i"]
_data = {
&"atacar": SubResource("Animation_m4xl8"),
&"caminar": SubResource("Animation_nbbxp")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qs8fw"]
size = Vector2(73, 20)

[node name="Avatar" type="CharacterBody2D"]
motion_mode = 1
script = ExtResource("1_qs8fw")
ataque = 3.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -30)
sprite_frames = SubResource("SpriteFrames_w3x54")
animation = &"atacar"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_4gl5s")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_uoc6i")
}

[node name="Detector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
position = Vector2(0, -51)
shape = SubResource("RectangleShape2D_qs8fw")
debug_color = Color(0.9286163, 3.3691525e-05, 0.6659409, 0.41960785)

[node name="AtacarRookTimer" type="Timer" parent="."]
one_shot = true

[connection signal="area_entered" from="Detector" to="." method="_on_detector_area_entered"]
[connection signal="area_exited" from="Detector" to="." method="_on_detector_area_exited"]
